# controlling-lights-app

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  database.py  models.py  repository.py  schemas.py
shared/: models.py  mqtt_topics.py
simulator/: main.py  settings.py
tests/: test_api.py  test_health.py  test_repository.py  test_simulator_settings.py
webapp/app/: config.py  main.py  mqtt_client.py  router.py  service.py
